k8s/kustomize/overlays/production/deploy.yaml
---
# App
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: app
  name: app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: app
  template:
    spec:
      containers:
      - name: app
        command: ["sh", "-c", "gunicorn apps.core.wsgi -b 0.0.0.0:8000 --timeout 300 --workers=8"]
      - name: nginx-sidecar
        image: nginx:alpine
        securityContext:
          runAsUser: 0
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /usr/share/nginx/html/static
          name: static-storage
        - mountPath: /usr/share/nginx/html/media
          name: media-storage
        resources:
          limits:
            cpu: 250m
            memory: 250m
      imagePullSecrets:
      - name: registry.motius.de
