k8s/kustomize/overlays/production/svc.yaml
---
# NGINX sidecar
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/instance: app
  name: django-example-nginx-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/instance: app
